--- a/reports/prelim/latex/2-background.tex
+++ b/reports/prelim/latex/2-background.tex
@@ -1,27 +1,27 @@
 \chapter{Background}\label{C:Background}
 
-\par Conceptually, this project aims to gather data in order to ultimately form a theory on the influences of security practices in New Zealand. Therefore, It is essential that I know enough information about the topic of security so that I am able to interview professional engineers in a manner which is knowledgeable. This chapter will include background on the importance of information security practices, what practices are widely used, summaries on existing research on similar subject matter, and a discussion on the chosen methodology.  
+\par Conceptually, this project aims to gather data in order to ultimately form a theory on the influences of security practices in New Zealand. Therefore, It is essential to know enough information about the topic of security so that interviews with professional programmers are conducted in a knowledgeable manner. This chapter will include background on the importance of information security practices, widely used security practices, summaries on existing research on similar subject matter, and a discussion on the chosen methodology.  
 
 \section{Research Methodology}
 
-Grounded theory (GT) is the chosen methodology for this study. It was an appropriate choice as the study focuses on human aspects and GT is appropriate to study these as it is way of analysing qualitative data with the end-goal of defining a new theory from the sampled data \cite{geeks}. There are several procedures in the GT  methodology in order to make the final theory.  The theory is expected to be explanatory, focusing on describing elements of the findings rather than stating. It should also be based on the collected responses and observations, rather than pre-conceived ideas. Avoidance of an extensive literature review should occur accordingly.
+Grounded theory (GT) is the chosen methodology for this study. It was an appropriate choice as the study focuses on human aspects and GT is appropriate to study these as it is a way of analysing qualitative data with the end-goal of defining a new theory from the sampled data \cite{geeks}. There are several procedures in the GT  methodology in order to make the final theory.  The theory is expected to be explanatory, focusing on describing elements of the findings rather than stating. It should also be based on the collected responses and observations, rather than pre-conceived ideas. Avoidance of an extensive literature review should occur accordingly.
 \newline
-\par Initially, researchers must choose a topic and research whether the Grounded Theory method is the right one for the research project \cite{geeks}. After contacting sample groups the iterative process of data collection occurs. Questions adapt between collection as analysis of the previous answers occurs. This refinement of questions happens to delve deeper into the traits of the emerging theory. When saturation is achieved, no more new findings are displayed which contribute to the final theory. This results in the “grounded” nature of the overall theory.
+\par Initially, researchers must choose a topic and research whether the Grounded Theory method is the right one for the research project \cite{geeks}. After contacting sample groups, the iterative process of data collection occurs. Questions adapt between collection as analysis of the previous answers occurs. This refinement of questions happens to delve deeper into the traits of the emerging theory. When saturation is achieved, no more new findings are displayed which contribute to the final theory. This results in the “grounded” nature of the overall theory.
 \newline
 \par Similar projects at the university have been conducted using this methodology. Siva Dorairaj's, "The Theory of One Team: Agile Software Development with Distributed Teams"; Rashina Hoda's, "Self-Organising Agile Teams: A Grounded Theory"; Brendan Julian's, "Agile Practices: A Theory of Agile Adoption and Evolution"; Nathan Newton's, "Information Security in Agile Software Development: A Critical Success Factor Perspective"; and Aaron Pangs, "What Programming Languages Do Developers Use? A Theory of Static vs Dynamic Language Choice" \cite{alumni}.
 
 \section{Information Security in New Zealand}
 
-Information security is defined by three objectives; confidentiality, integrity and availability, most commonly referred to as the CIA triad. Confidentiality is the act of keeping information private to protect information, Integrity is the act of maintaining information validity and Availability is the act of ensuring reliable access to information.  Any breach of those principles can result in significant negative impacts economically, and to personal emotional and physical well-being. 
+Three objectives define information security; confidentiality, Integrity and Availability, most commonly referred to as the CIA triad. Confidentiality is the act of keeping information private to protect the information, Integrity is the act of maintaining information validity and Availability is the act of ensuring reliable access to information.  Any breach of those principles can result in significant adverse impacts economically, and to personal emotional and physical well-being. 
 \newline
-\par A study run by Aura Security showed showed a 10\% increase in cyber-attacks on New Zealand businesses between the years of 2018-2019 \cite{aura}. In NZ the rise is attributed to the digitisation of day-to-day way-of-life; as new technologies are continuously developed there is an urgency to deploy products. There is a lot of pressure on programmers to finalise these products and the deviation of attention to the finished output means that there are many new threats to security \cite{securitystrat}. Malicious attackers are also becoming more sophisticated. Individual threat attackers now seem to have the same knowledge and resources as nation-backed actors \cite{securitystrat}.
+\par A study run by Aura Security showed a 10\% increase in cyber-attacks on New Zealand businesses between the years of 2018-2019 \cite{aura}. In NZ, the rise is attributed to the digitisation of day-to-day way-of-life; as new technologies continuously develop, there is an urgency to deploy products. There is a lot of pressure on programmers to finalise these products, and the deviation of attention to the finished output means that there are many new threats to security \cite{securitystrat}. Malicious attackers are also becoming more sophisticated. Individual threat attackers now seem to have the same knowledge and resources as nation-backed actors \cite{securitystrat}.
 \newline
 \newline
 Areas of improvement identified by the New Zealand government are \cite{securitystrat}:
 
 \begin{enumerate}
-    \item \textbf{Cyber security aware and active citizens:} Increased regular awareness campaigns and education opportunities for the public in regards to best personal security practices. 
-    \item \textbf{Strong and capable cyber security workforce and ecosystem:} Increased promotion and support of the development of the cyber industry in New Zealand.
+    \item \textbf{Cyber security-aware and active citizens:} Increased regular awareness campaigns and education opportunities for the public in regards to best personal security practices. 
+    \item \textbf{Strong and capable cybersecurity workforce and ecosystem:} Increased promotion and support of the development of the cyber industry in New Zealand.
     \item \textbf{Internationally active:} Detect and prevent any breaches as well as proactively maintaining international relationships regarding information security and participating in any rule reforms. 
     \item \textbf{Resilient and responsive New Zealand:} Supporting infrastructure, businesses, charity organisations, community organisations, individuals in improving security capabilities and resilience.
     \item \textbf{Proactively tackle cybercrime:} Increasing support to impacted parties,  preventing and encouraging reporting of any cybercrimes. 
@@ -31,23 +31,23 @@ Areas of improvement identified by the New Zealand government are \cite{security
 
 \section{Secure Programming Practices}
 
-Secure refers to protecting and deterring any security breaches due to vulnerabilities in program code. Without a focus of security while programming, there is a lack of confidence in the outputted security, resulting in the lack of use and waste of time, effort and money. If unsecured programs are used, it poses significant negative impacts to businesses and individuals. 
+Secure refers to protecting and deterring any security breaches due to vulnerabilities in program code. Without a focus on security while programming, there is a lack of confidence in the outputted security, resulting in the lack of use and waste of time, effort and money. If unsecured programs are in use, it poses significant adverse impacts to businesses and individuals.  
 \newline
-\par The Open Web Application Security Project (OWASP) have outlined a checklist to ensure that code is secure. They have provided this document which spans various languages and technologies as the nonprofit foundation aims to improve the security across all software. It is stated that it is "much less expensive to build software than to correct security issues" \cite{owasp}.
+\par The Open Web Application Security Project (OWASP) has outlined a checklist to ensure that code is secure. They have provided this document which spans various languages and technologies as the nonprofit foundation aims to improve the security across all software. It states that it is "much less expensive to build software than to correct security issues" \cite{owasp}.
 \newline
 \newline
 Significant items from the checklist include \cite{owasp}: 
 
 \begin{itemize}
-\item \textbf{Input Validation:} This is the act of validating that all inputs are trusted. Examples of inputs are data from databases, file streams, etc, as well as client provided data. If anything is classed as 'untrusted', it should fail and result in a rejection. The application should have one input validation routine, a specified common character set and all validation should occur on a preset trusted system. 
-\item \textbf{Output Encoding:} When data is sent back to a client, the information needs to be output encoded. To make this secure, a started test routine has to be utilised, and similar to input validation; all encoding must occur on a preset trusted system. 
-\item \textbf{Authentication and Password Management:} This is verifying whether a user is allowed to perform an action. Best practice is restricting all resources except the ones intended to be public. All authentication controls should be able to fail in order to maintain security and passwords should be hashed.  In order to pass, authentication has to occur first and every detail has to match the protected records. 
+\item \textbf{Input Validation:} This is the act of validating that all inputs are trusted. Examples of inputs are data from databases, file streams, as well as client-provided data. Anything classed as 'untrusted',  should fail and result in a rejection. The application should have one input validation routine, a specified standard character set and all validation should occur on a preset trusted system. 
+\item \textbf{Output Encoding:} Data sent back the client needs to be output encoded. To make this secure, a started test routine has to be utilised, and similar to input validation; all encoding must occur on a preset trusted system. 
+\item \textbf{Authentication and Password Management:} This is verifying whether a user is allowed to act. Best practice is restricting all resources except the ones intended to be public. All authentication controls should be able to fail in order to maintain security, and passwords need hashing.  In order to pass, authentication has to occur first, and every detail has to match the protected records. 
 \item \textbf{Session Management:} A session should only associate the same client ID. It can only occur after authentication. 
-\item \textbf{Access Control:} Set users access based on system permissions. It should use only preset trusted systems. 
+\item \textbf{Access Control:} Set users access based on system permissions. It should use only preset, trusted systems. 
 \item \textbf{Cryptographic Practices:} All assets should be protected by cryptography. A policy should be established in how to manage the public and private keys. 
-\item \textbf{Error Handing and Logging:} All application errors must be ‘caught’ and handled. They should not disclose any information in the error responses, and instead only show in the logs. The logs themselves can only be accessed by a few and mechanisms should be in place to analyse the logs. 
+\item \textbf{Error Handing and Logging:} All application errors must be 'caught' and handled. They should not disclose any information in the error responses, and instead, only show in the logs. A few can only access the logs themselves, and mechanisms should be in place to analyse the logs. 
 \item \textbf{Data Protection:} Protect most assets, communications and caches. Encrypt any stored information that holds significant value. 
-\item \textbf{Communication Security:} Encrypt any communication channels. Certificates should be valid and the protocol Transport Layer Security should be used. 
+\item \textbf{Communication Security:} Encrypt any communication channels. Certificates should be valid, and the protocol Transport Layer Security should be in use. 
 \item \textbf{System Configuration:} Ensure that everything is up to date. This includes servers, frameworks, components, languages, IDE's and libraries. Remove unnecessary information before deployment; test code, TODO's, HTTP methods and response headers. 
 \item \textbf{Database Security:} Maintain short connections. Authentication needs to be checked prior use, and access control needs to be restricted. 
 \item \textbf{File Management:} Require authentication and access control before any interaction with files. Validate file headers. Implement safe uploading by scanning for any malicious intent; viruses and malware. 
@@ -56,7 +56,7 @@ Significant items from the checklist include \cite{owasp}:
 \begin{itemize}
 \item Use tested and trusted components for tasks
 \item Restrict users from altering code in any way
-\item Review all third part components; code and libraries
+\item Review all third party components; code and libraries
 \item Initialise all variables and fields
 \end{itemize}
 \end{itemize}
@@ -67,7 +67,7 @@ This project expands upon ideas on the following works; A Survey with Software D
 
 \subsection{“Think secure from the beginning” – Assal and Chiasson}
 
-In “A Survey with Software Developers” \cite{summary1}, the authors pursue to understand the human behaviours and motivations which surround factors of software security. The authors specified a series of questions targeted towards software developers through an online survey. The research examined responses to further support the professional development of programmers, both in theory and practice. This aligns well with the research goals of “Why Do Programmers Do What They Do?”, as it aims to form a theory on the influences and effects of decisions surrounding technical work. 
+In “A Survey with Software Developers” \cite{summary1}, the authors pursue to understand the human behaviours and motivations which surround factors of software security. The authors specified a series of questions targeted toward software developers through an online survey. The research examined responses to support the professional development of programmers further, both in theory and practice. This aligns well with the research goals of “Why Do Programmers Do What They Do?”, as it aims to form a theory on the influences and effects of decisions surrounding technical work. 
 \newline
 \newline
 The results outlined the following common groups:
@@ -75,12 +75,12 @@ The results outlined the following common groups:
 \begin{enumerate}
 \item \textbf{Work Motivation:} Developers did not lack motivation in their job. They performed based on self-determination.
 \item \textbf{Understanding of software security:} Developers had a sound understanding of software security. They grasped the importance of securing technical work and the discussed various methods of doing so and specifying at what stages in the project life-cycle they should implement these based on “best practices”.
-\item \textbf{Security Issues:} Majority of the participants believed their software could be compromised, despite being comfortable with the approaches to protecting the software. The majority has also experienced a security issue, whether that be a breach, or vulnerable code.
+\item \textbf{Security Issues:} Majority of the participants believed their software could be compromised, despite being comfortable with the approaches to protecting the software. The majority has also experienced a security issue, whether that be a breach or vulnerable code.
 \end{enumerate}
 
-\par From these common groups the overarching theme displayed was that the developers were not purposefully ignorant to maintaining security practices, the majority were proactive and willing to learn. However, it was the importance of functionality and lack of ongoing support from organisations which made working towards a more secure software challenging. 
+\par From these common groups, the overarching theme displayed was that the developers were not purposefully ignorant about maintaining security practices; the majority were proactive and willing to learn. However, it was the importance of functionality and lack of ongoing support from organisations which made working towards a more secure software challenging. 
 \newline
-\par This paper was valuable to read as there are strong similarities between the research topic developed in this and the subject of the 489 topic. The methodologies are different, however, the findings of this display a programmers personal perspective rather than a theorised view. It is a direct comparison to our project, and we can further outline questions directed to the future work stated in the article's conclusion; “to explore potential relationships between motivations, deterrents and strategies for software security” and “investigate security procedures and attitudes in companies that have experienced security breaches and compare it to others who have not”. 
+\par This paper was valuable to read as there are strong similarities between the research topic developed in this and the subject of this 489 topic. The methodologies are different; however, the findings of this display a programmers personal perspective rather than a theorised view. It is a direct comparison to our project, and we can further outline questions directed to the future work stated in the article’s conclusion; “to explore potential relationships between motivations, deterrents and strategies for software security” and “investigate security procedures and attitudes in companies that have experienced security breaches and compare it to others who have not”. 
 \newline
 \par Similar questions from the survey can be used for the interview process in this study. Important questions identified are:
 
@@ -108,7 +108,7 @@ Security                  & Security \\ \hline
 \newpage
 \subsection{“Software Development Practices in New Zealand” – Kirk and Tempero}
 
-\par In “Software Development Practices in New Zealand” \cite{summary2}, the report authors look to “developing and applying a range of software productivity techniques and tools to enhance the performance of the New Zealand software industry”. Like Assal and Chiasson, the authors of this study outlined a series of questions in a survey targeted towards known Information Technology organisations. The aim of the survey was to understand the practices used by industry and in the findings can be used to make recommendations on best-use development practices for organisations. Kirk and Tempero’s report is similar in output to the one research defined in this report as the findings of the theory can be used to make suggestions for teams adopting and developing security practices. 
+\par In “Software Development Practices in New Zealand” \cite{summary2}, the report authors look to “developing and applying a range of software productivity techniques and tools to enhance the performance of the New Zealand software industry”. Like Assal and Chiasson, the authors of this study outlined a series of questions in a survey targeted towards known Information Technology organisations. The survey aimed to understand the practices used by industry and in the findings can be used to make recommendations on best-use development practices for organisations. Kirk and Tempero’s report is similar in output to the one research defined in this report as the findings of the theory can be used to make suggestions for teams adopting and developing security practices. 
 \newline
 \newline
 The key findings of this study were:
@@ -117,17 +117,17 @@ The key findings of this study were:
 \item Organisations and individuals \textbf{do not follow} standard agile process models.
 \item New Zealand is generally more \textbf{implementation-focused} in software development. There is an emphasis on this over other aspects of the software development life-cycle such as security and testing. 
 \item Decision-making is a \textbf{collaborative effort} with individuals involved in different stages and traits of the development life-cycle. 
-\item While most New Zealander's state they are “agile” this is not supported as frequent contact with clients and stakeholders is not upheld. However, there is a \textbf{highly iterative aspect} to the work individuals do on projects which does maintain agile principles. 
+\item While most New Zealander's state they are "agile" this is not supported as frequent contact with clients and stakeholders is not upheld. However, there is a \textbf{highly iterative aspect} to the work individuals do on projects which do maintain agile principles. 
 \item There is a \textbf{weakness in requirements gathering} which results in a widely noticed lack of clarity on scope details. 
-\item A tie in to point 2, notices a severe \textbf{lack of code quality} whether this be in design, reviewing and testing stages, or with general coding best practices. 
-\item Most \textbf{do not develop around }tools such as libraries, rather they use them as a support. This can be derived as not being “best-practice” and can be more time consuming. 
+\item A tie into point 2, notices a severe \textbf{lack of code quality} whether this is in design, reviewing and testing stages, or with general coding best practices. 
+\item Most \textbf{do not develop around }tools such as libraries, and rather they use them as a support. This can be derived as not being "best-practice" and can be more time-consuming. 
 \end{enumerate}
 
 \par Not much was asked specific to security, but finding number 6 links to poor practices around secure programming. 
 \newline
-\par The report had a limitation in which it did not make any recommendations at this stage, but it did mention that these findings can be used by organisations to obtain a view of the software practices in New Zealand. From here the organisations can make their own decisions on what to focus on to better their specific operations.  
+\par The report had a limitation in which it did not make any recommendations at this stage, but it did mention that these findings can be used by organisations to obtain a view of the software practices in New Zealand. From here, organisations can make their own decisions on what to focus on to better their specific operations.  
 \newline
-\par Comparing to the described ENGR489 project, the methodology is different, and while the topics too are differing, they are similar enough to make interesting comparisons between the two. Kirk and Tempero focus on software development practices, while this project will research security practices. A comparison that can be made could be between the findings, as much like the prior related work, the findings are that of personal perspective of the participants rather than an objective view which Grounded Theory supplies.
+\par Comparing to the described ENGR489 project, the methodology is different, and while the topics to are differing, they are similar enough to make interesting comparisons between the two. Kirk and Tempero focus on software development practices, while this project will research security practices. A comparison that can be made could be between the findings, as much like the prior related work; the findings are that of a personal perspective of the participants rather than an objective view which Grounded Theory supplies.
 \newline
 \par The differences are outlined in the table below:
 \newline
