--- a/reports/prelim/latex/5-feedback.tex
+++ b/reports/prelim/latex/5-feedback.tex
@@ -1,3 +1,3 @@
 \chapter{Feedback}\label{C:feedback}
 
-Feedback on what would be an interesting area of focus would be much appreciated. I am currently focusing on education, but that almost seems like a overdone field. However, it is something of interest to me, so perhaps any input on how to make it more unique. Any feedback on the potential questions and one how to adapt questions to participants will also be much appreciated. Overall, interview and grounded theory feedback would also be helpful. 
+Feedback on what would be an interesting area of focus would be much appreciated. I am currently focusing on education, but that almost seems like an overdone field. However, it is something of interest to me, so perhaps any input on how to make it more unique. Any feedback on the potential questions and one how to adapt questions to participants will also be much appreciated. Overall, interview and grounded theory feedback would also be helpful. 
