Fixed typos and uploaded last meeting minutes

--- a/meeting_log/07-02-2020.md
+++ b/meeting_log/07-02-2020.md
@@ -27,4 +27,4 @@
 
 | Task                   | Due             |
 | ---------------------- | --------------- |
-| Start proper analuysis | By next meeting |
+| Start proper analysis | By next meeting |
