--- a/reports/final/latex/0-acknowledge.tex
+++ b/reports/final/latex/0-acknowledge.tex
@@ -1,9 +1,9 @@
 \chapter*{Acknowledgements}\label{C:Acknowledge}
 
-I would like to thank my supervisors James Noble and Craig Anslow for their ongoing support and direction as I have completed this project.
+I want to thank my supervisors James Noble and Craig Anslow, for their ongoing support and direction as I have completed this project.
 \newline
 \newline
-To dad and mum, thanks for harassing friends to potentially participate in this study. With the addition of my brother;  thank you for having no idea about what I have been doing all year long, but also for leaving me fairly alone for these last three weeks as I recluse into a hole where I write, write, write and write. 
+To dad and mum, thanks for harassing friends to potentially participate in this study. To dad, mum and Saumya, thank you all for having no idea about what I have been doing all year long, but for also leaving me relatively alone for these last weeks as I write, write, write and write. 
 \newline
 \newline
-And to Janaye; a massive thanks for reading over this report and being my grammar and punctuation whizz since high school. 
+And to Janaye; a massive thanks for reading over this report and being my grammar and punctuation whizz since high school.
