--- a/reports/final/latex/1-introduction.tex
+++ b/reports/final/latex/1-introduction.tex
@@ -1,15 +1,15 @@
 \chapter{Introduction}\label{C:intro}
 
-\par Software is now ubiquitous across many industries \cite{ubiq}. Programmers have to ensure that the security processes that they implement are resilient to attacks. Lack of attack prevention can cause leakage of sensitive information, major economic damage and danger to massive numbers of users and employees. Consequently, this opens businesses, clients and end-users to exploitation by threat actors. 
+\par Software is now ubiquitous across many industries \cite{ubiq}. Programmers have to ensure that the security processes that they implement are resilient to attacks. Lack of attack prevention can cause leakage of sensitive information, significant economic damage and danger to massive numbers of users and employees. Consequently, this opens businesses, clients and end-users to exploitation by threat actors. 
 \newline
-\par When security and privacy issues do occur in real-world scenarios, programmers are blamed first as it is the faults in their implementation which allow for the exploitation of vulnerabilities \cite{4}. Programmers do make mistakes, which is why they need the support to make better security decisions, and this support is currently lacking in the industry \cite{4}. Education is limited past initial acceptance within organisations, and often programmers have a blasé attitude regarding security, instead expecting other teams to fix the issue \cite{5}. Furthermore, security mechanisms often have increased complexity, which makes them challenging to understand and to then use \cite{6}. 
+\par When security and privacy issues do occur in real-world scenarios, programmers get blamed first as it is the faults in their implementation, which allow for the exploitation of vulnerabilities \cite{4}. Programmers do make mistakes, which is why they need the support to make better security decisions, and this support is currently lacking in the industry \cite{4}. Security mechanisms often have increased complexity, which makes them challenging to understand and to then use \cite{6}. 
 \newline
 \par
-Last year New Zealand experienced a significant security breach within the Tū Ora Compass Health (Tū Ora) Primary Health Organisation (PHO) \cite{incident}. Tū Ora is one of the largest PHO's in the country, and it governs the greater Wellington region \cite{incident}. Personal information of up to one million New Zealander's was exposed, and the effects of this are ongoing \cite{incident}. Costs have been high in attempts to mitigate any effects to the public. Dedicated call centres have been set-up as well as dedicated mental health lines \cite{healthpol, incident}. Regular updates are released in order to maintain communication transparency and assurance quality measures are ongoing \cite{healthpol, incident}. 
+Last year New Zealand experienced a significant security breach within the Tū Ora Compass Health (Tū Ora) Primary Health Organisation (PHO) \cite{incident}. Tū Ora is one of the largest PHO's in the country, and it governs the greater Wellington region \cite{incident}. Personal information of up to one million New Zealander's was exposed, and the effects of this are ongoing \cite{incident}. Costs have been high in attempts to mitigate any effects to the public. Dedicated call centres have been set-up as well as dedicated mental health lines \cite{incident,healthpol}. Regular updates still release to those affected in order to maintain communication transparency and assurance quality measures are ongoing \cite{incident,healthpol}. 
 \newline
-\par This project will investigate how programmers implement and adopt security practices in the work they do in order to develop an understanding of what influences and impact decisions surrounding their technical work. This project uses Grounded Theory, a method which aims to establish a theory when there is none \cite{2}, and it is commonly used for data analysis. Interviews will take place to collect the data, to then analyse and present a theory on standard security practices in the professional workplace. This project builds upon works by Hala Assal, Charles Weir and Nathan Newton \cite{summary1, 1, nathan}. 
+\par This project will investigate how programmers implement and adopt security practices in the work they do in order to develop an understanding of what influences and impact decisions surrounding their technical work. This project uses Grounded Theory, a method which aims to establish a theory when there is none, and the method gets used for data analysis \cite{2}. Interviews will take place to collect the data, to then analyse and present a theory on standard security practices in the professional workplace. This project builds upon works by Hala Assal, Charles Weir and Nathan Newton \cite{summary1, 1, nathan}. 
 \newline
-\par Participants will be recruited by posting on tech-related groups (i.e. From OWASP Meetup Group and LinkedIn) and mailing lists and also using my own and my supervisor contacts. At this point, semi-structured interviewing can take place with 10-20 interested individuals on the topic of their security practices while programming. Practices include; libraries, frameworks, protocols and specific languages. These people will all be programmers in New Zealand that are in varying stages of their careers and career paths to allow for a broader range of responses and a case study relevant to New Zealand. Examples of appropriate job titles include:
+\par Participants will be recruited by posting on tech-related groups (i.e. From OWASP Meetup Group and LinkedIn) and mailing lists and also using my own and my supervisor contacts. At this point, semi-structured interviewing can take place with 10-20 interested individuals on the topic of their security practices while programming. Practices include libraries, frameworks, protocols and specific languages. These people will all be programmers in New Zealand that are in varying stages of their careers and career paths to allow for a broader range of responses and a case study relevant to New Zealand. Examples of appropriate job titles include:
 \begin{itemize}
 \item  DevOps Engineer
 \item Software Developer
@@ -21,13 +21,13 @@ Last year New Zealand experienced a significant security breach within the Tū O
 \item Security Consultant.
 \end{itemize}
 
-\par This project will lead to a new, more in-depth understanding of the psychology of the decisions made by programmers which can support security education programmes in tertiary education providers and within the workplace. The research undertaken by this project could lead to future qualitative research on another under-developed topic on why programmers do what they do. Paired with this research, future studies could help build a profile of a programmer and their thought processes. Data collected could also be the foundation that allows a programmer to build tools that help other programmers implement proper security practices; a Grammarly for Security. It could also help the further development of existing static analysis tools such as Infer developed by Facebook, Tricorder used by Google, Coverity and Raygun \cite{infer, tri, coverity, raygun}. These tools all work by providing security detection modules and are used for quality assurance and security. 
+\par This project will lead to a new, more in-depth understanding of the psychology of the decisions made by programmers which can support security education programmes in tertiary education providers and within the workplace. The research undertaken by this project could lead to future qualitative research on another under-developed topic on why programmers do what they do. Paired with this research, future studies could help build a profile of a programmer and their thought processes. Data collected could also be the foundation that allows a programmer to build tools that help other programmers implement proper security practices, a Grammarly for Security. It could also help the further development of existing static analysis tools such as Infer developed by Facebook, Tricorder used by Google and Coverity \cite{infer, tri, coverity}. These tools all work by providing security detection modules and get used for quality assurance and security. 
 
 \section{COVID-19 Effect}
 
- \par In trimester one, during the thick of COVID-19 in New Zealand, there were no issues with this project. As the country went back to normal, however, I found it increasingly difficult to schedule time with participants as the move back for them was disruptive. They were doing half-and-half working from home and in-the-office and also dealing with their transitions back to "normal". Therefore, there were many non-respondents, no-shows and general lack-of-communication from participants due to external reasons related to the pandemic. This pushed back the project timeline I planned to follow by weeks. 
+ \par In trimester one, during the thick of COVID-19 in New Zealand, there were no issues with this project. As the country went back to normal; however, I found it increasingly difficult to schedule time with participants as the move back for them was disruptive. They were doing half-and-half working from home and in-the-office and also dealing with their transitions back to "normal". Therefore, there were many non-respondents, no-shows and general lack-of-communication from participants due to external reasons related to the pandemic. This pushed back the project timeline I planned to follow by weeks. 
  \newline
-\par I also found that in the second trimester the workload in other courses was a lot more than last semester even with the supposed reductions due to the pandemic. This made it hard to dedicate the much needed time into this project. I finally burned out during the last three weeks and was unable to complete a second full literature review. 
+\par I also found that in the second trimester, the workload in other courses was a lot more than last semester even with the supposed reductions due to the pandemic. This made it hard to dedicate the much needed time into this project. I finally burned out during the last three weeks and was unable to complete a second full literature review. 
 \newline
-\par Mentally the second-half of semester has been difficult. With the borders closed no one has been able to leave New Zealand and there have been some extended family members who have died in India. Despite the separation, Indian family units are quite close so that has definitely been a shock. 
+\par Mentally the second half of the trimester has been difficult. With the borders closed, no one has been able to leave New Zealand, and there have been some extended family members who have died in India. Despite the separation, Indian family units are quite close, so that has been a shock. 
 
