--- a/reports/final/latex/2-background.tex
+++ b/reports/final/latex/2-background.tex
@@ -1,11 +1,11 @@
 \chapter{Background}\label{C:Background}
 
-\par Tthis project aims to gather data in order to ultimately form a theory on the influences of security practices in New Zealand. This chapter includes some background on what security actually is, the importance of information security practices, widely used security practices and summaries on existing research on similar subject matter. 
+\par This project aims to gather data in order to ultimately form a theory on the influences of security practices in New Zealand. This chapter includes some background on what security is, the importance of information security practices, widely used security practices and summaries on existing research on the similar subject matter. 
 
 \section{What is Security?}
 \par Three objectives define security; Confidentiality, Integrity and Availability, most commonly referred to as the CIA triad \cite{craigbook}. The triad measures, controls and protects information assets which include hardware, software, firmware,  information data and telecommunications \cite{nist}. A now common synonym for security is the term coined; cybersecurity \cite{nist}. 
 \newline
-\par Confidentiality is the act of maintaining protection of information from threat agents \cite{craigbook}. This term also encapsulates privacy where "individuals control or influence what information related to them may be collected and stored and by whom and to whom that information may be disclosed\cite{craigbook}. Integrity is the maintenance of data, so that information and programs are only changed when needed by authorised bodies \cite{craigbook}. It also covers system integrity where "a system performs its intended function in an unimpaired manner, free from deliberate or inadvertent unauthorised manipulation of the system" \cite{craigbook}. Availability is the act of ensuring reliable access to information to authorised users \cite{craigbook}.  Any breach of these principles can result in significant adverse impacts on reputation, health and safety, service delivery as well as finances \cite{imp}.
+\par Confidentiality is the act of maintaining the protection of information from threat agents \cite{craigbook}. This term also encapsulates privacy where "individuals control or influence what information related to them may be collected and stored and by whom and to whom that information may be disclosed\cite{craigbook}. Integrity is the maintenance of data so that information and programs are only changed when needed by authorised bodies \cite{craigbook}. It also covers system integrity where "a system performs its intended function in an unimpaired manner, free from deliberate or inadvertent unauthorised manipulation of the system" \cite{craigbook}. Availability is the act of ensuring reliable access to information to authorised users \cite{craigbook}.  Any breach of these principles can result in significant adverse impacts on reputation, health and safety, service delivery, as well as finances \cite{imp}.
 
 \section{Information Security in New Zealand}
 
@@ -61,7 +61,7 @@ Significant items from the checklist include \cite{owasp}:
 
 A small literature review was undertaken to gain insights on similar studies.
 
-\subsection{“Think secure from the beginning” – Assal and Chiasson}
+\subsection{Think secure from the beginning}
 
 In “A Survey with Software Developers” \cite{summary1}, the authors investigate the human behaviours and motivations surrounding factors of software security. The authors specified a series of questions targeted toward software developers through an online survey. The research examined responses to support the professional development of programmers further, both in theory and practice. This was chosen as background reading as it aligns well with the research goals of “Why Do Programmers Do What They Do?”, as it aims to form a theory on the influences and effects of decisions surrounding technical work. 
 \newline
@@ -105,9 +105,7 @@ The differences and similarities can be easier understood in the table below:
 \centering
 \end{table}
 
-
-\newpage
-\subsection{“Software Development Practices in New Zealand” – Kirk and Tempero}
+\subsection{Software Development Practices in New Zealand}
 
 \par In “Software Development Practices in New Zealand” \cite{summary2}, the report authors look to “developing and applying a range of software productivity techniques and tools to enhance the performance of the New Zealand software industry”. Like Assal and Chiasson, the authors of this study outlined a series of questions in a survey targeted towards known Information Technology organisations. The survey aimed to understand the practices used by industry and in the findings can be used to make recommendations on best-use development practices for organisations. Kirk and Tempero’s report is similar in output to the ENGR489 project as the findings can be used to make suggestions for teams adopting and developing security practices. This was chosen as a background reading as it provides insights on the current state of industry in New Zealand, which is what I aimed to develop in the research outlined in this report. 
 \newline
