--- a/reports/final/latex/7-references.bib
+++ b/reports/final/latex/7-references.bib
@@ -261,9 +261,9 @@ howpublished={[Online]. Available: \url{https://fbinfer.com/}},
 year   = "[Accessed May 31 2020]"
 }
     
-    @misc{know ,
+@misc{know,
 author = {Beth Hendrix},
-title = {Knowledge Sharing: Definition & Process},
+title = {Knowledge Sharing: Definition \& Process},
 howpublished = {Available at \url{https://study.com/academy/lesson/knowledge-sharing-definition-process.html} (2017/12/28)}
 year = "[Accessed October 20 2020]"
 }
